--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,16 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "ITC Franklin Gothic Medium Condensed";
+  src: url("../assets/fonts/ITC Franklin Gothic Medium Condensed.otf")
+    format("opentype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "SF Mono", "Monaco", "Inconsolata", "Roboto Mono",
+    "Source Code Pro", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "SF Mono", "Monaco", "Inconsolata", "Roboto Mono",
+    "Source Code Pro", monospace;
+}
+
+/* Heading styles using ITC Franklin Gothic Medium Condensed */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "ITC Franklin Gothic Medium Condensed", "Franklin Gothic Medium",
+    "Impact", "Arial Black", sans-serif;
 }
