--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,7 +38,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.franklin-font {
   font-family: "ITC Franklin Gothic Medium Condensed", "Franklin Gothic Medium",
     "Impact", "Arial Black", sans-serif;
 }
