--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,14 @@
 }
 
 @font-face {
+  font-family: "GFS Didot";
+  src: url("../assets/fonts/GFSDidot-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "ITC Franklin Gothic Medium Condensed";
   src: url("../assets/fonts/ITC Franklin Gothic Medium Condensed.otf")
     format("opentype");
